<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_to_do_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/indiv_menu_1"
            android:checkable="false"
            android:name="android:actionMenuTextAppearance">@style/customActionBar</item>
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/indiv_menu_2"
            android:checkable="false"
            android:name="android:actionMenuTextAppearance">@style/customActionBar</item>

        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/indiv_menu_3"
            android:checkable="false"
            android:name="android:actionMenuTextAppearance">@style/customActionBar</item>
        <item
            android:id="@+id/v_assessment"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/indiv_menu_4"
            android:checkable="false"
            android:name="android:actionMenuTextAppearance">@style/customActionBar</item>
    </group>


</menu>
