<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_white" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:textAllCaps="true"/>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/login_page_button"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="#80db5461"
        android:text="@string/login"
        android:textColor="@color/gray"
        android:theme="@style/ButtonStyle" />
</LinearLayout>
