<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_project.csumb.com.autitrak.chanel.AccountFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <!--profile picture-->
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/ic_account_circle_black_24dp" />

                <!--change profile picture-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-40dp"
                    android:text="@string/account_edit_photo_label"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="215dp">

                <!--cardview linear layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <!--progress-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/progress_label"
                            android:textColor="@color/gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/caregiver_progress_btn"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_show_chart_black_24dp" />
                    </LinearLayout>
                    <!--end progress-->

                    <!--notifications-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications_label"
                            android:textColor="@color/gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/caregiver_notif_btn"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_notifications_black_24dp" />
                    </LinearLayout>
                    <!--end notifications-->

                    <!--settings-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_label"
                            android:textColor="@color/gray"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/caregiver_settings_btn"
                            android:background="@color/white"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_settings_black_24dp" />
                    </LinearLayout>
                    <!--end settings-->

                </LinearLayout>
                <!--end cardview linear layout-->
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <!--account info-->

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <!--caregiver id-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="45dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_fingerprint_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/account_id_label"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <!--name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="45dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_person_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/account_name_label"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <!--email-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="45dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_email_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/account_email_label"
                    android:textColor="@color/blue"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</FrameLayout>