<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group_project.csumb.com.autitrak.AccountFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/gradientbackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account_circle_black_48dp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_name_label"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="215dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:background="@color/cardview_light_background">

                    <!--Progress-->
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/progress_label"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:textStyle="bold"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_show_chart_black_24dp"
                            android:paddingTop="10dp"/>
                    </LinearLayout>

                    <!--Notifications-->
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications_label"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:textStyle="bold"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_notifications_black_24dp"
                            android:paddingTop="10dp"/>
                    </LinearLayout>

                    <!--Settings-->
                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_label"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:textStyle="bold"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_settings_black_24dp"
                            android:paddingTop="10dp"
                            />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
