<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/to_do_list_rlayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:background="@color/blue"
        >

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:src="@drawadraw_bgt_bg" />-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="@color/off_white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#80ffffff"
                    android:padding="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/idImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:src="@drawable/puzzle" />

                    <TextView
                        android:id="@+id/idDescription"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/idStartDate"
                        android:layout_toRightOf="@+id/idStartDate"
                        android:text="@string/task_name"
                        android:textAllCaps="true"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:id="@+id/idLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_below="@+id/idDescription"
                        android:layout_marginRight="10dp"
                        android:text="@string/task_difficulty"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/idPoints"
                        android:layout_marginTop="10dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/idDescription"
                        android:layout_toRightOf="@+id/idDescription"
                        android:gravity="right"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/task_points"
                        android:textColor="@color/colorPrimaryBlue"
                        android:textSize="48sp"
                        android:visibility="invisible"/>

                    <ImageView
                        android:id="@+id/task_pt_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_toRightOf="@id/idDescription"
                        android:layout_marginLeft="10dp"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:id="@+id/idStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        android:text="Start Date: "
                        android:textColor="#C49799"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/idEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        android:text="End Date: "
                        android:textColor="#C49799"
                        android:visibility="invisible"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
